Fixed-Schedule-Update-Form-filed-misalign

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -635,8 +635,8 @@
         &.admin__field {
             > .admin__field-control {
                 &:extend(.abs-field-size-small all);
-                float: left;
                 position: relative;
+                display: inline-block;
             }
         }
 
